cmake_minimum_required(VERSION 3.5)
project(intro)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(iotest iotest.cpp)
add_executable(simpleFunctions simpleFunctions.cpp)
add_executable(choice1 choice1.cpp)
add_executable(choice2 choice2.cpp)
add_executable(choice3 choice3.cpp)
add_executable(area4 area4.cpp)
add_executable(grade1 grade1.cpp)
add_executable(area3 area3.cpp)
add_executable(grade3 grade3.cpp)
add_executable(grade2 grade2.cpp)
